--- a/package.json
+++ b/package.json
@@ -8,10 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/embed": "^2.5.0",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/list": "^1.6.2",
+    "@editorjs/paragraph": "^2.8.0",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "editorjs-html": "^3.4.2",
+    "editorjs-paragraph-with-alignment": "^3.0.0",
+    "i": "^0.3.7",
+    "jquery": "^3.6.0",
+    "npm": "^8.3.0",
+    "save": "^2.4.0",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@editorjs/raw": "^2.3.0",
+    "@editorjs/simple-image": "^1.4.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
